# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
andyriddle_brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
brain_games/: cli.py  engine.py  engine_brain_games.py
brain_games/games/: brain_calc.py  brain_even.py  brain_game_calc.py  brain_game_even.py  brain_game_gcd.py  brain_game_prime.py  brain_game_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_game_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  engin_brain_games.py
