
[tool.poetry]
name = "AndyRiddle_brain_games"
version = "1.0.0"
description = ""
authors = ["Andy <kas2850.cuk@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

